--- a/PHP/assets/style.css
+++ b/PHP/assets/style.css
@@ -2,6 +2,7 @@ html, body {
     height: 100%;
     margin: 0; 
 	padding: 0;
+	font-family: 'Calibri Light', Calibri;
 }
 
 body{
@@ -75,7 +76,7 @@ td img{
 
 .compteur{
 	text-align: center;
-	color: red;
+	color: #4F1A5C;
 }
 
 footer{
